Fix parallization issue